Bug 512367. Don't reset fullZoom level when zooming in/out of an image loaded in an <iframe>. r=smaug